--- a/laoshe_demo.html
+++ b/laoshe_demo.html
@@ -23,7 +23,7 @@ background-size: cover;
 background-position: center;
 }
 .virtual-character {
-background-image: url(laoshe.png);
+background-image: url(./images/laoshe.png);
 background-size: contain;
 background-repeat: no-repeat;
 background-position: center;
