--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
             font-family: 'ZCOOL XiaoWei', serif;
         }
         .map-container {
-            background-image: url(image.png);
+            background-image: url(./images/image.png);
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
@@ -89,7 +89,7 @@
                 </a>
                 
                 <div class="mascot w-20 h-30" id="mascot">
-                    <img src="xiaoduo.png" alt="北师小铎" class="w-full h-full">
+                    <img src="./images/xiaoduo.png" alt="AI导游" class="w-full h-full">
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="card-popup absolute top-[32%] left-[27%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">老舍纪念馆</h3>
-                        <img src="https://public.readdy.ai/ai/img_res/d927a9e0199973ebfb4420873cff6a71.jpg" alt="老舍纪念馆" class="w-full h-32 object-cover rounded mb-2">
+                        <img src="./images/laoshe.jpg" alt="老舍纪念馆" class="w-full h-32 object-cover rounded mb-2">
                         <p class="text-sm text-gray-600 mb-2">位于北京市西城区，是纪念中国著名作家老舍先生的场所，展示了其生平和文学成就。</p>
                         <a href="./laoshe_demo.html">
                             <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="card-popup absolute top-[42%] left-[47%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">郭沫若纪念馆</h3>
-                        <img src="https://public.readdy.ai/ai/img_res/9718a86d97332adc17b6306534b2698c.jpg" alt="郭沫若纪念馆" class="w-full h-32 object-cover rounded mb-2">
+                        <img src="./images/guomoruo.jpg" alt="郭沫若纪念馆" class="w-full h-32 object-cover rounded mb-2">
                         <p class="text-sm text-gray-600 mb-2">位于北京市东城区，是纪念中国著名作家、历史学家、考古学家郭沫若的场所。</p>
                         <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
                     </div>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="card-popup absolute top-[37%] left-[62%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">北京鲁迅博物馆</h3>
-                        <img src="https://public.readdy.ai/ai/img_res/97c64e04140ee2119bd73099d4eec1cd.jpg" alt="北京鲁迅博物馆" class="w-full h-32 object-cover rounded mb-2">
+                        <img src="./images/luxun.jpg" alt="北京鲁迅博物馆" class="w-full h-32 object-cover rounded mb-2">
                         <p class="text-sm text-gray-600 mb-2">位于北京市西城区，是为纪念中国现代文学家鲁迅而建立的纪念性博物馆。</p>
                         <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
                     </div>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="card-popup absolute top-[52%] left-[37%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">北京李大钊故居</h3>
-                        <img src="https://public.readdy.ai/ai/img_res/06206f13e3eb4e606ab15b54bc958d99.jpg" alt="北京李大钊故居" class="w-full h-32 object-cover rounded mb-2">
+                        <img src="./images/lidazhao.jpg" alt="北京李大钊故居" class="w-full h-32 object-cover rounded mb-2">
                         <p class="text-sm text-gray-600 mb-2">位于北京市西城区，是中国共产党创始人之一李大钊生前居住过的地方。</p>
                         <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
                     </div>
@@ -150,7 +150,7 @@
                     </div>
                     <div class="card-popup absolute top-[27%] left-[57%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">宋庆龄故居</h3>
-                        <img src="https://public.readdy.ai/ai/img_res/bd5ae416a6d38bd19cb06eac76aab243.jpg" alt="宋庆龄故居" class="w-full h-32 object-cover rounded mb-2">
+                        <img src="./images/songqingling.jpg" alt="宋庆龄故居" class="w-full h-32 object-cover rounded mb-2">
                         <p class="text-sm text-gray-600 mb-2">位于北京市西城区，是中国伟大的爱国主义者、政治家宋庆龄生前居住的地方。</p>
                         <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
                     </div>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="card-popup absolute top-[47%] left-[42%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">茅盾故居</h3>
-                        <img src="https://public.readdy.ai/ai/img_res/2a77541dc6fbb121175eaba6e986d471.jpg" alt="茅盾故居" class="w-full h-32 object-cover rounded mb-2">
+                        <img src="./images/maodun.jpg" alt="茅盾故居" class="w-full h-32 object-cover rounded mb-2">
                         <p class="text-sm text-gray-600 mb-2">位于北京市东城区，是中国著名作家、文学评论家茅盾生前居住的地方。</p>
                         <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
                     </div>
@@ -170,7 +170,7 @@
                     </div>
                     <div class="card-popup absolute top-[62%] left-[72%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">曹雪芹故居纪念馆</h3>
-                        <img src="https://public.readdy.ai/ai/img_res/39c5a1e20a2c483ba60ddce7ba5511d1.jpg" alt="曹雪芹故居纪念馆" class="w-full h-32 object-cover rounded mb-2">
+                        <img src="./images/caoxueqin.jpg" alt="曹雪芹故居纪念馆" class="w-full h-32 object-cover rounded mb-2">
                         <p class="text-sm text-gray-600 mb-2">位于北京市西城区，是纪念《红楼梦》作者曹雪芹的场所，展示了其生平和文学成就。</p>
                         <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
                     </div>
@@ -218,13 +218,13 @@
                 <i class="ri-close-line text-xl"></i>
             </button>
             <div class="flex items-center mb-4">
-                <img src="xiaoduo.png" alt="北师小铎" class="w-20 h-30 mr-3">
+                <img src="./images/xiaoduo.png" alt="AI导游" class="w-20 h-30 mr-3">
                 <div>
-                    <h3 class="text-xl font-bold text-primary">北师小铎</h3>
+                    <h3 class="text-xl font-bold text-primary">AI导游</h3>
                     <p class="text-gray-600">您的文化导览小助手</p>
                 </div>
             </div>
-            <p class="mb-4">您好！我是北师小铎，很高兴为您提供北京文化名人纪念馆导览服务。需要我为您推荐游览路线或提供更详细的信息吗？</p>
+            <p class="mb-4">您好！我是AI导游，很高兴为您提供北京文化名人纪念馆导览服务。需要我为您推荐游览路线或提供更详细的信息吗？</p>
             <div class="grid grid-cols-2 gap-3">
                 <a href="travel-demo.html" class="block">  <!-- 新增a标签 -->
                     <button class="w-full bg-primary text-white py-2 !rounded-button whitespace-nowrap">
