--- a/main.html
+++ b/main.html
@@ -89,7 +89,7 @@
                 </a>
                 
                 <div class="mascot w-20 h-30" id="mascot">
-                    <img src="./images/xiaoduo.png" alt="AI导游" class="w-full h-full">
+                    <img src="./images/xiaoduo.png" alt="AI导游小铎" class="w-full h-full">
                 </div>
             </div>
         </div>
@@ -218,13 +218,13 @@
                 <i class="ri-close-line text-xl"></i>
             </button>
             <div class="flex items-center mb-4">
-                <img src="./images/xiaoduo.png" alt="AI导游" class="w-20 h-30 mr-3">
+                <img src="./images/xiaoduo.png" alt="AI导游小铎" class="w-20 h-30 mr-3">
                 <div>
-                    <h3 class="text-xl font-bold text-primary">AI导游</h3>
+                    <h3 class="text-xl font-bold text-primary">AI导游小铎</h3>
                     <p class="text-gray-600">您的文化导览小助手</p>
                 </div>
             </div>
-            <p class="mb-4">您好！我是AI导游，很高兴为您提供北京文化名人纪念馆导览服务。需要我为您推荐游览路线或提供更详细的信息吗？</p>
+            <p class="mb-4">您好！我是AI导游小铎，很高兴为您提供北京文化名人纪念馆导览服务。需要我为您推荐游览路线或提供更详细的信息吗？</p>
             <div class="grid grid-cols-2 gap-3">
                 <a href="travel-demo.html" class="block">  <!-- 新增a标签 -->
                     <button class="w-full bg-primary text-white py-2 !rounded-button whitespace-nowrap">
