--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
                     <div class="card-popup absolute top-[32%] left-[27%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">老舍纪念馆</h3>
                         <img src="./images/laoshe.jpg" alt="老舍纪念馆" class="w-full h-32 object-cover rounded mb-2">
-                        <p class="text-sm text-gray-600 mb-2">位于北京市西城区，是纪念中国著名作家老舍先生的场所，展示了其生平和文学成就。</p>
+                        <p class="text-sm text-gray-600 mb-2">位于北京市东城区，是纪念中国著名作家老舍先生的场所，展示了其生平和文学成就。</p>
                         <a href="./laoshe_demo.html">
                             <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
                         </a>    
@@ -121,7 +121,7 @@
                     <div class="card-popup absolute top-[42%] left-[47%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">郭沫若纪念馆</h3>
                         <img src="./images/guomoruo.jpg" alt="郭沫若纪念馆" class="w-full h-32 object-cover rounded mb-2">
-                        <p class="text-sm text-gray-600 mb-2">位于北京市东城区，是纪念中国著名作家、历史学家、考古学家郭沫若的场所。</p>
+                        <p class="text-sm text-gray-600 mb-2">位于北京市西城区，是纪念中国著名作家、历史学家、考古学家郭沫若的场所。</p>
                         <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
                     </div>
 
@@ -171,7 +171,7 @@
                     <div class="card-popup absolute top-[62%] left-[72%] w-64 bg-white rounded-lg shadow-xl p-4 z-10">
                         <h3 class="text-lg font-bold mb-2">曹雪芹故居纪念馆</h3>
                         <img src="./images/caoxueqin.jpg" alt="曹雪芹故居纪念馆" class="w-full h-32 object-cover rounded mb-2">
-                        <p class="text-sm text-gray-600 mb-2">位于北京市西城区，是纪念《红楼梦》作者曹雪芹的场所，展示了其生平和文学成就。</p>
+                        <p class="text-sm text-gray-600 mb-2">位于北京市东城区，是纪念《红楼梦》作者曹雪芹的场所，展示了其生平和文学成就。</p>
                         <button class="bg-primary text-white px-3 py-1 !rounded-button text-sm whitespace-nowrap">了解更多</button>
                     </div>
 
