--- a/travel-demo.html
+++ b/travel-demo.html
@@ -463,7 +463,7 @@ document.getElementById('travelInput').addEventListener('keypress', function(e) 
 <i class="ri-user-line text-primary"></i>
 </div>
 <div>
-<h4 class="font-medium">于正非</h4>
+<h4 class="font-medium">参与者1</h4>
 <p class="text-sm text-gray-500">组织者</p>
 </div>
 </div>
@@ -475,7 +475,7 @@ document.getElementById('travelInput').addEventListener('keypress', function(e) 
 <i class="ri-user-line text-gray-400"></i>
 </div>
 <div>
-<h4 class="font-medium">于正非</h4>
+<h4 class="font-medium">参与者2</h4>
 <p class="text-sm text-gray-500">成员</p>
 </div>
 </div>
